name:                  haskoin-node
version:               0.4.0
synopsis:
    Implementation of a Bitoin node.
description:
    haskoin-node provides an implementation of the Bitcoin network protocol
    that allows you to synchronize headers (with SPV validation) and download
    merkle blocks and full blocks. This package can be used to implement
    wallets or other Bitcoin components that require talking to the Bitcoin
    network. It provides the following features:
    .
    * Implementation of the Bitcoin network protocol
    * Headertree implementation with SPV verification
    * Headers-first synchronization
    * Merkle block download from peers with bloom filters
    * Full block download from peers
    .
    A wallet implementation using this package is available in haskoin-wallet.

homepage:              http://github.com/haskoin/haskoin
bug-reports:           http://github.com/haskoin/haskoin/issues
tested-with:           GHC==7.10.3, GHC==7.10.2, GHC==7.10.1
stability:             stable
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade, Jean-Pierre Rupp
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://github.com/input-output-hk/haskoin.git

library
    exposed-modules: Network.Haskoin.Node.HeaderTree
                     Network.Haskoin.Node.Checkpoints
                     Network.Haskoin.Node.Peer
                     Network.Haskoin.Node.BlockChain
                     Network.Haskoin.Node.STM
    other-modules:   Network.Haskoin.Node.HeaderTree.Types
                     Network.Haskoin.Node.HeaderTree.Model

    extensions: OverloadedStrings
                FlexibleInstances
                FlexibleContexts
                RecordWildCards
                DeriveDataTypeable

    build-depends: aeson                    >= 0.7          
                 , async                    >= 2.0          
                 , base                     >= 4.8          
                 , bytestring               >= 0.10         
                 , concurrent-extra         >= 0.7          
                 , cereal                   >= 0.5          
                 , conduit                  >= 1.2          
                 , conduit-extra            >= 1.1          
                 , containers               >= 0.5          
                 , data-default             >= 0.5          
                 , deepseq                  >= 1.4          
                 , either                   >= 4.3          
                 , esqueleto              
                 , exceptions               >= 0.8          
                 , haskoin-core             >= 0.3          
                 , largeword                >= 1.2.4        
                 , lifted-async             >= 0.2          
                 , lifted-base              >= 0.2          
                 , monad-control            >= 1.0          
                 , monad-logger             >= 0.3          
                 , mtl                      >= 2.2          
                 , network                  >= 2.4          
                 , persistent             
                 , persistent-template    
                 , resource-pool            >= 0.2          
                 , random                   >= 1.0          
                 , stm                      >= 2.4          
                 , stm-chans                >= 3.0          
                 , stm-conduit              >= 2.5          
                 , string-conversions       >= 0.4          
                 , text                     >= 0.11         
                 , time                     >= 1.4          
                 , streaming-commons        >= 0.1          

    ghc-options: -threaded -rtsopts -with-rtsopts=-TN -Wall -O2
                 -fno-warn-orphans

test-suite test-haskoin-node
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    extensions: EmptyDataDecls

    other-modules: Network.Haskoin.Node.Tests
                   Network.Haskoin.Node.Units

    build-depends: base                           >= 4.8        
                 , haskoin-core
                 , haskoin-node
                 , HUnit                          >= 1.2        
                 , QuickCheck                     >= 2.6        
                 , monad-logger                   >= 0.3        
                 , mtl                            >= 2.2        
                 , persistent           
                 , persistent-sqlite    
                 , resourcet                      >= 1.1        
                 , test-framework                 >= 0.8        
                 , test-framework-quickcheck2     >= 0.3        
                 , test-framework-hunit           >= 0.3        

    ghc-options:  -threaded -rtsopts -with-rtsopts=-TN -Wall -fno-warn-orphans
    hs-source-dirs: tests
